syntax = "proto3";
package IronPdfEngine.Proto;
import "PdfDocument.proto";

option java_package = "com.ironsoftware.ironpdf.internal.proto";
option java_multiple_files = true;

message AddBackgroundForegroundRequest{
  PdfDocument base_pdf = 1;
  oneof layer{
    PdfDocument background_pdf = 2;
    PdfDocument foreground_pdf = 3;
  }
  int32 layer_pdf_page_index = 4;
  repeated int32 base_pdf_pages = 5;
}
